--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.60.4",
     "react-native-action-button": "^2.8.5",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-gravatar": "^1.0.2",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-swipeable": "^0.6.0",
